# c-in-a-nutshell

./: CMakeLists.txt  main.c
arrays/: arrays.c  arrays.h
chapter_1/: c1.c  c1.h
declarations/: declarations.c  declarations.h
dynamic_memory_management/: memory.c  memory.h
expressions_and_operators/: expressions.c  expressions.h
functions/: functions.c  functions.h
input_and_output/: io.c  io.h
language_basics/: circle.c  circle.h
literals/: literals.c  literals.h
pointers/: pointers.c  pointers.h
preprocessing_directives/: preprocessing.c  preprocessing.h
statements/: statements.c  statements.h
structures_unions_bitfields/: records.c  records.h
type_conversions/: conversions.c  conversions.h
types/: enums.c  enums.h  limits.c  limits.h  using_void.c  using_void.h  void.c  void.h
